Fixes for announcement vert alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -82,14 +82,14 @@ img.displayed {
 .announcement-wrapper {
     border-radius: 10px;
     width: 110%;
-    padding-top:55%;
+    padding-top:65%;
 }
 
 .announcement {
     position: absolute;
     top:0%;
     width:70%;
-    height: 55%;
+    height: 65%;
     margin-top:10%;
     margin-left:16%;
     /* To keep scrollbar from overlapping text*/
